infrastructure/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enemy-soldiers-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enemy-soldiers-api
  template:
    metadata:
      labels:
        app: enemy-soldiers-api
    spec:
      containers:
      - name: enemy-soldiers-api
        image: elif2/enemy-soldiers-api:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: enemy-soldiers-service
spec:
  selector:
    app: enemy-soldiers-api
  ports:
  - port: 8000
    targetPort: 8000
